force-app/main/default/objects/GFH_Milestone__c/fields/LearningMetric_09__c.field-meta.xml
<CustomField>
    <fullName>LearningMetric_09__c</fullName>
    <label>Learning Metric 09</label>
    <type>Date</type>
</CustomField>