force-app/main/default/objects/GFH_Milestone__c/fields/LearningMetric_14__c.field-meta.xml
<CustomField>
    <fullName>LearningMetric_14__c</fullName>
    <label>Learning Metric 14</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>