force-app/main/default/objects/GFH_Milestone__c/fields/LearningMetric_16__c.field-meta.xml
<CustomField>
    <fullName>LearningMetric_16__c</fullName>
    <label>Learning Metric 16</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>