force-app/main/default/objects/GFH_Milestone__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <type>Lookup</type>
    <referenceTo>GFH_Project__c</referenceTo>
    <relationshipName>Milestones</relationshipName>
    <relationshipLabel>Milestones</relationshipLabel>
</CustomField>